fixed the border and spacing on the page

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,3 +21,10 @@ h1{
    border-radius: 5px;
    color: white;
 }
+
+
+
+.mr-4{
+    border: solid black 1px;
+    border-radius: 0%;
+}
